[package]
name = "chatgpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
